# cpp-tools

./: .gitignore  CMakeLists.txt  README.md
include/cpptools/: macros.hpp  semaphore_lock.hpp  shared_memory.hpp  spinlock_mutex.hpp  spinlock_mutex_ipc.hpp  thread.hpp
lib/: CMakeLists.txt
src/: semaphore_lock.cpp  shared_memory.cpp  spinlock_mutex.cpp  thread.cpp
tests/: CMakeLists.txt  test_semaphore_lock.cpp  test_shared_memory.cpp  test_spinlock_mutex.cpp  test_spinlock_mutex_ipc.cpp  test_thread.cpp
